--- a/documentation.html
+++ b/documentation.html
@@ -1,4 +1,3 @@
-{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NutriData API Documentation</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/documentation.css' %}">
+    <link rel="stylesheet" href="documentation.css">
 </head>
 <body>
     <header>
-        <h1>Food API Documentation</h1>
-        <p>Welcome to the Food API documentation. This API provides information about various foods, recipes, and nutritional data.</p>
+        <h1>NutriData API Documentation</h1>
+        <p>Welcome to the NutriData API documentation. This API provides information about various foods, recipes, and nutritional data.</p>
     </header>
 
     <section class="endpoint">
