--- a/documentation.html
+++ b/documentation.html
@@ -53,7 +53,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Food API. All rights reserved.</p>
+        <p>&copy; 2023 NutriData API. All rights reserved.</p>
     </footer>
 </body>
 </html>
